# example-qt-in-mfc

./: MFC_with_QtWidget.sln  README.rst
App/: App.cpp  App.h  App.props  App.rc  App.vcxproj  App.vcxproj.filters  AppDlg.cpp  AppDlg.h  framework.h  resource.h
App/res/: App.rc2
Dll/: CMakeLists.txt  main.cpp  mydialog.cpp  mydialog.h  mydialog.ui  mydialog_api.h
